--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ihugacownow/hubot-script-spreadsheet/tree/phones"
+    "url": "https://github.com/ihugacownow/hubot-script-spreadsheet#phones"
   },
   "dependencies": {
     "url":"",
